<resources>
    <!-- Home -->
    <string name="home_title">Home Sample</string>
    <string name="show_all_apps">All</string>

    <!-- Home Menus -->
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <!-- Wallpaper -->
    <string name="wallpaper_instructions">Tap picture to set portrait wallpaper</string>

    <string name="app_name">TWD_tv</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_app">编辑应用</string>
    <string name="qidong_app">打开</string>
    <string name="launch_app">打开</string>
    <string name="update_app">更新</string>
    <string name="favorite_app">收藏</string>
    <string name="remove_app">卸载</string>
    <string name="app_store">应用商城</string>
    <string name="check_your_network">请检查您的网络连接！</string>
    <string name="start_clear">开始扫描</string>
    <string name="in_clear">正在清理中</string>
    <string name="clean_up_the_garbage">清理垃圾</string>
    <string name="unit">MB</string>
    <string name="eliminate_num">进程数目:</string>
    <string name="surolus_memory">剩余内存:</string>
    <string name="start_eliminate_process">开始清理</string>
    <string name="timing_clear">定时清理</string>
    <string name="stop_timing_clear">停止定时清理</string>
    <string name="device_name">设备名称</string>
    <string name="version">版本号</string>
    <string name="security_patch">安全补丁</string>
    <string name="kernel">内核版本</string>
    <string name="runtime">运行时间</string>
</resources>